--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.x.x",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1"
